tests/js/valid/tags/declaration.buri
@export
booleanTrue = #true

@export
booleanFalse = #false

@export
hello = #hello

@export
localHost = #ip(127, 0, 0, 1)