tests/js/invalid/when/mismatched-types-3.buri
result = when #rgb(0, 0, 0) is
    #rgb do 1